Updated index.html and added something.html

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixed Header Example</title>
+    <link rel="icon" href="img/ico.ico" type="image/x-icon">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,7 +50,7 @@
             width: 80%; /* Задайте фіксовану ширину */
             max-width: 700px; /* Максимальна ширина, яку ви хочете дозволити */
             margin: 50px auto; /* Автоматичні зовнішні відступи по верхньому та нижньому краях, і центрування по горизонталі */
-            padding: 10px; /* Внутрішні відступи */
+            padding: 100px; /* Внутрішні відступи */
             text-align: center; /* Вирівнювання тексту по центру */
             background-color: #fff; /* Колір фону */
             border-radius: 10px; /* Закруглені кути */
@@ -67,16 +69,17 @@
 <body>
 
 <div class="fixed-header">
-    <h3>Це фіксована панель</h3>
+    <h3>Сайтик</h3>
     <div class="header-links">
-        <a href="#contacts">Контакти</a>
-        <a href="#contacts">Контакти</a>
-        <a href="#contacts">Контакти</a>
+        <a href="something.html">Контакти</a>
+        <a href="something.html">Інформація</a>
+        <a href="something.html">Щось</a>
+        <a href="https://savelife.in.ua">Донат на ЗСУ</a>
     </div>
 </div>
 
 <div class="content">
-    <h2>Ось ваш контент</h2>
+    <h2>Тут може бути будь-який текст</h2>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed magna nisi. Donec eu varius quam, vitae vulputate ipsum. Ut urna ipsum, elementum in nibh eget, ultricies ultrices ante. Morbi et ultrices libero. Proin convallis nunc id nisi suscipit sodales sit amet a risus. Nullam magna neque, egestas nec lacus at, tempor aliquet eros. Integer sit amet rutrum sem. Nullam nec elit dolor. Nunc placerat enim sem, sit amet vestibulum dolor dapibus vel. Curabitur et dui faucibus, molestie ligula at, posuere ipsum. Curabitur varius ipsum nec nisl blandit, ac porttitor urna ullamcorper. Nulla in leo in elit scelerisque tincidunt. Aenean tempus venenatis massa at bibendum. Ut luctus turpis nec magna dapibus, non viverra eros hendrerit. Etiam ultricies urna sed egestas vulputate. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
     </p>
