--- a/src/something.html
+++ b/src/something.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Можливо, тут колись щось буде</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;        }
+    </style>
 </head>
 <body>
-
+<h1 style="text-align: center;">Можливо, тут колись щось буде</h1>
+<img style="display: block; margin: 0 auto;" src="img/sad_cat.png">
 </body>
 </html>
