--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,8 @@
         .content {
             width: 80%; /* Задайте фіксовану ширину */
             max-width: 700px; /* Максимальна ширина, яку ви хочете дозволити */
-            margin: 50px auto; /* Автоматичні зовнішні відступи по верхньому та нижньому краях, і центрування по горизонталі */
-            padding: 100px; /* Внутрішні відступи */
+            margin: 100px auto 50px; /* Автоматичні зовнішні відступи по верхньому та нижньому краях, і центрування по горизонталі */
+            padding: 20px; /* Внутрішні відступи */
             text-align: center; /* Вирівнювання тексту по центру */
             background-color: #fff; /* Колір фону */
             border-radius: 10px; /* Закруглені кути */
