--- a/src/something.html
+++ b/src/something.html
@@ -14,5 +14,11 @@
 <body>
 <h1 style="text-align: center;">Можливо, тут колись щось буде</h1>
 <img style="display: block; margin: 0 auto;" src="img/sad_cat.png">
+<h1>Відео на сторінці</h1>
+
+<video width="640" height="360" controls>
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
 </body>
 </html>
